products/connectivity/envoy-gateway/templates/gateway-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway-public
  annotations:
    'cert-manager.io/revision-history-limit': "1"
    'cert-manager.io/cluster-issuer': letsencrypt-dns
spec:
  addresses:
    - value: 95.98.178.131
      type: IPAddress
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-gateway-public
  listeners:
   - name: web-http
     protocol: HTTP
     port: 80
     hostname: '*.feddema.dev'
     allowedRoutes:
       namespaces:
         from: Same
   - name: web-https
     protocol: HTTPS
     port: 443
     hostname: '*.feddema.dev'
     allowedRoutes:
       namespaces:
         from: All
     tls:
       mode: Terminate
       certificateRefs:
       - group: ''
         kind: Secret
         name: star-feddema-dev-tls
