products/connectivity/envoy-gateway/templates/http-route-tls-upgrade.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-upgrade
spec:
  parentRefs:
  - name: envoy-gateway
    sectionName: web-http
  hostnames:
  - '*.feddema.dev'
  rules:
   - filters:
     - type: RequestRedirect
       requestRedirect:
         scheme: https
         port: 443
